kubernetes/apps/homepage/redirect-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: homepage
spec:
  redirectScheme:
    scheme: https
    permanent: true
