kubernetes/apps/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage-serviceaccount
      containers:
      - name: homepage
        image: ghcr.io/gethomepage/homepage:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config-writable
          mountPath: /app/config
        - name: logs
          mountPath: /app/config/logs
      volumes:
      - name: config-source
        configMap:
          name: homepage-config
      - name: config-writable
        emptyDir: {}
      - name: logs
        emptyDir: {}
