kubernetes/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
spec:
  selector:
    app: homepage
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  type: ClusterIP
